--- a/examples/convoluted_question.ipynb
+++ b/examples/convoluted_question.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "04c43a84-9396-4e8f-8a3e-7f30e1246e39",
    "metadata": {
     "tags": []
@@ -10,13 +10,13 @@
    "outputs": [],
    "source": [
     "from easy_llm_agents.commands import BaseCommand, handlers\n",
-    "conv = BaseCommand.create_conversation('gpt-4', model_options={'temperature': 0.5, 'max_tokens': 500})\n",
+    "conv = BaseCommand.create_conversation('gpt-4')\n",
     "driver = BaseCommand.get_driver(conv, messenger=handlers.print_messages, qa=handlers.do_nothing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8ad9d617-ae73-4a66-a676-5e7a29fd9868",
    "metadata": {
     "tags": []
@@ -26,147 +26,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Permissive Overseer> THINK requested. \"Find manageable steps to achieve goal \". GRANTED.\n",
-      "<Permissive Overseer> SEARCH requested. \"Determine the most recent Turing Award winner \". GRANTED.\n",
-      "<Message from THINK>\n",
-      "thoughts: - Determine the most recent Turing Award winner\n",
-      "- Find out who is their spouse\n",
-      "- Search for the spouse's workplace zip code\n",
-      "- Calculate the zip code raised to the power of 0.73\n",
-      "<Message from SEARCH>\n",
+      "<Permissive Overseer> self_note requested. \"Find manageable steps to achieve goal\". GRANTED.\n",
+      "<Permissive Overseer> search requested. \"Determine the most recent Turing Award winner\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: ['Determine the most recent Turing Award winner', 'Find out who is their spouse', \"Search for the spouse's workplace zip code\", 'Calculate the zip code raised to the power of 0.73']\n",
+      "<Message from search>\n",
       "info: Googling most recent Turing Award winner\n",
-      "<Permissive Overseer> THINK requested. \"Update plan with new info \". GRANTED.\n",
-      "<Permissive Overseer> SEARCH requested. \"Find Bob Metcalfe's spouse \". GRANTED.\n",
-      "<Message from THINK>\n",
-      "thoughts: I know the most recent Turing Award winner is Bob Metcalfe. Find his spouse and their workplace zip code.\n",
-      "<Message from SEARCH>\n",
+      "<Permissive Overseer> self_note requested. \"Update plan with new info\". GRANTED.\n",
+      "<Permissive Overseer> search requested. \"Find out who is Bob Metcalfe's spouse\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: ['The most recent Turing Award winner is Bob Metcalfe.', \"Find out who is Bob Metcalfe's spouse\", \"Search for the spouse's workplace zip code\", 'Calculate the zip code raised to the power of 0.73']\n",
+      "<Message from search>\n",
       "info: Googling Bob Metcalfe spouse\n",
-      "<Permissive Overseer> THINK requested. \"Update plan with new info \". GRANTED.\n",
-      "<Permissive Overseer> SEARCH requested. \"Find Robyn Shotwell's workplace zip code \". GRANTED.\n",
-      "<Message from THINK>\n",
-      "thoughts: I know Bob Metcalfe's spouse is Robyn Shotwell. Find her workplace zip code.\n",
-      "<Message from SEARCH>\n",
+      "<Permissive Overseer> self_note requested. \"Update plan with new info\". GRANTED.\n",
+      "<Permissive Overseer> search requested. \"Search for Robyn Shotwell's workplace zip code\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: [\"Bob Metcalfe's spouse is Robyn Shotwell.\", \"Search for Robyn Shotwell's workplace zip code\", 'Calculate the zip code raised to the power of 0.73']\n",
+      "<Message from search>\n",
       "info: Googling Robyn Shotwell workplace zip code\n",
-      "<Permissive Overseer> READ_PAGE requested. \"Read Robyn Shotwell Metcalfe's CV to find her workplace zip code \". GRANTED.\n",
-      "<Message from READ_PAGE>\n",
-      "info: Extract and summarize https://robynsmetcalfe.com/wp-content/uploads/2021/06/MetcalfeCV2020.pdf with instruction `workplace zip code`\n",
-      "<Message from READ_PAGE>\n",
-      "info: Total lines: 894. Tokens: 90339. Summarizations~ 46\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #1 to 13 with approx 1766 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #14 to 21 with approx 1604 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #22 to 49 with approx 1972 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #50 to 65 with approx 1945 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #66 to 72 with approx 1997 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #73 to 84 with approx 1712 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #85 to 103 with approx 1856 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #104 to 112 with approx 1593 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #113 to 119 with approx 1697 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #120 to 143 with approx 1973 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #144 to 163 with approx 1772 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #164 to 173 with approx 1739 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #174 to 208 with approx 1979 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #209 to 236 with approx 1726 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #237 to 270 with approx 1587 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #271 to 282 with approx 1983 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #283 to 294 with approx 1887 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #295 to 309 with approx 1979 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #310 to 319 with approx 1819 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #320 to 338 with approx 1890 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #339 to 347 with approx 1579 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #348 to 373 with approx 1858 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #374 to 384 with approx 1944 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #385 to 402 with approx 1871 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #403 to 435 with approx 1968 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #436 to 450 with approx 1606 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #451 to 456 with approx 1859 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #457 to 468 with approx 1932 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #469 to 486 with approx 1940 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #487 to 497 with approx 1958 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #498 to 526 with approx 1919 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #527 to 542 with approx 1905 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #543 to 554 with approx 1811 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #555 to 563 with approx 1655 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #564 to 573 with approx 1872 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #574 to 583 with approx 1702 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #584 to 594 with approx 1709 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #595 to 604 with approx 1968 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #605 to 627 with approx 1716 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #628 to 645 with approx 1993 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #646 to 678 with approx 1778 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #679 to 690 with approx 1961 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #691 to 715 with approx 1407 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #716 to 718 with approx 1896 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #719 to 763 with approx 1992 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #764 to 776 with approx 1980 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #777 to 806 with approx 1942 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #807 to 813 with approx 1936 tokens in text\n",
-      "<Message from READ_PAGE>\n",
-      "info: Performing summarization for line #814 to 872 with approx 1994 tokens in text\n",
-      "<Permissive Overseer> THINK requested. \"Try a different approach \". GRANTED.\n",
-      "<Permissive Overseer> SEARCH requested. \"Robyn Shotwell Metcalfe current position and location \". GRANTED.\n",
-      "<Message from THINK>\n",
-      "thoughts: Robyn Shotwell Metcalfe's CV did not provide the workplace zip code. Search for her current position and location.\n",
-      "<Message from SEARCH>\n",
-      "info: Googling Robyn Shotwell Metcalfe position location\n",
-      "<Permissive Overseer> THINK requested. \"Update plan with new info \". GRANTED.\n",
-      "<Permissive Overseer> PYTHON requested. \"Calculate zip code raised to the power of 0.73 \". GRANTED.\n",
-      "<Message from THINK>\n",
-      "thoughts: I know Robyn Shotwell Metcalfe works at The University of Texas at Austin in Austin, Texas 78712. Calculate the zip code raised to the power of 0.73.\n",
-      "<Message from PYTHON>\n",
+      "<Permissive Overseer> self_note requested. \"Update plan with new info\". GRANTED.\n",
+      "<Permissive Overseer> search requested. \"Find the zip code for the University of Texas at Austin\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: ['Robyn Shotwell Metcalfe works at the University of Texas at Austin.', 'Find the zip code for the University of Texas at Austin', 'Calculate the zip code raised to the power of 0.73']\n",
+      "<Message from search>\n",
+      "info: Googling University of Texas at Austin zip code\n",
+      "<Permissive Overseer> self_note requested. \"Update plan with new info\". GRANTED.\n",
+      "<Permissive Overseer> python requested. \"Calculate both zip codes raised to the power of 0.73\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: ['The University of Texas at Austin has two zip codes: 78712 and 78705.', 'Calculate both zip codes raised to the power of 0.73']\n",
+      "<Message from python>\n",
       "info: Executing code snippet\n",
-      "code: zip_code = 78712\n",
-      "result = zip_code ** 0.73\n",
-      "result\n",
-      "<Permissive Overseer> ANSWER requested. \"Report the zip code raised to the power of 0.73 \". GRANTED.\n",
-      "The zip code of Robyn Shotwell Metcalfe's workplace (78712) raised to the power of 0.73 is approximately 3750.68.\n",
+      "code: \n",
+      "zip_codes = [78712, 78705]\n",
+      "results = [round(z ** 0.73, 2) for z in zip_codes]\n",
+      "results\n",
+      "\n",
+      "<Permissive Overseer> self_note requested. \"Verify question is answered\". GRANTED.\n",
+      "<Permissive Overseer> answer requested. \"Report the calculated values for both zip codes\". GRANTED.\n",
+      "<Message from self_note>\n",
+      "thoughts: ['The zip codes of the University of Texas at Austin are 78712 and 78705.', 'The values raised to the power of 0.73 are 3750.68 and 3750.44, respectively.', \"The user asked for the zip code of the most recent Turing Award winner's spouse's workplace raised to the power of 0.73.\"]\n",
+      "The University of Texas at Austin has two zip codes: 78712 and 78705. When raised to the power of 0.73, they result in values of approximately 3750.68 and 3750.44, respectively.\n",
       "\n"
      ]
     }
