feat: add deligate command for hard tasks

--- a/examples/learn_a_new_trick.ipynb
+++ b/examples/learn_a_new_trick.ipynb
@@ -23,7 +23,7 @@
     "from easy_llm_agents.commands import BaseCommand, handlers\n",
     "conv = BaseCommand.create_conversation(\n",
     "    'gpt-4',\n",
-    "    metadata={'work_dir': os.path.expanduser('~/easy_llm_agents/examples/playground')},  # Save output files for prosperity\n",
+    "    metadata={'work_dir': os.path.join(os.getcwd(), 'playground')},  # Save output files for prosperity\n",
     "    model_options={'temperature': 0.8, 'max_tokens': 600}    # creative mode\n",
     ") \n",
     "driver = BaseCommand.get_driver(conv, messenger=handlers.print_messages, overseer=handlers.do_nothing, qa=handlers.do_nothing)"
