some tuning to improve delegation

--- a/examples/convoluted_question.ipynb
+++ b/examples/convoluted_question.ipynb
@@ -11,7 +11,13 @@
    "source": [
     "from easy_llm_agents.commands import BaseCommand, handlers\n",
     "conv = BaseCommand.create_conversation('gpt-4')\n",
-    "driver = BaseCommand.get_driver(conv, messenger=handlers.print_messages, overseer=handlers.do_nothing, qa=handlers.do_nothing, essential_only=True)"
+    "driver = BaseCommand.get_driver(\n",
+    "    conv,\n",
+    "    messenger=handlers.print_messages,\n",
+    "    overseer=handlers.do_nothing,\n",
+    "    qa=handlers.do_nothing,\n",
+    "    essential_only=True\n",
+    ")"
    ]
   },
   {
