fix: forgot to check in util file

--- a/examples/write_a_scifi_novel.ipynb
+++ b/examples/write_a_scifi_novel.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c074408-d4bf-4217-a87d-84a0a5d2d5e8",
    "metadata": {
     "tags": []
@@ -386,52 +386,51 @@
     {
      "data": {
       "text/plain": [
-       "{'work_dir': '/Users/virtualzx/easy_llm_agents/examples/scifi',\n",
-       " 'file_registry': {'discoveries.txt': 'A list of recent thought-provoking discoveries in science and technology',\n",
-       "  'world_building.md': 'A description of the far future world for the sci-fi novel',\n",
-       "  'characters.md': 'A list of diverse and well-developed characters for the sci-fi novel',\n",
-       "  'story_arcs.md': 'Multiple story arcs with plot twists for the sci-fi novel',\n",
-       "  'bookX_chapterY_draft.md': 'Draft for each chapter of the 5 books',\n",
-       "  'book1_chapter1_draft.md': 'Draft for Book 1, Chapter 1',\n",
-       "  'book1_chapter2_draft.md': 'Draft for Book 1, Chapter 2',\n",
-       "  'book1_chapter3_draft.md': 'Draft for Book 1, Chapter 3',\n",
-       "  'book2_chapter1_draft.md': 'Draft for Book 2, Chapter 1',\n",
-       "  'book2_chapter2_draft.md': 'Draft for Book 2, Chapter 2',\n",
-       "  'book2_chapter3_draft.md': 'Draft for Book 2, Chapter 3',\n",
-       "  'book3_chapter1_draft.md': 'Draft for Book 3, Chapter 1',\n",
-       "  'book3_chapter2_draft.md': 'Draft for Book 3, Chapter 2',\n",
-       "  'book3_chapter3_draft.md': 'Draft for Book 3, Chapter 3',\n",
-       "  'book4_chapter1_draft.md': 'Draft for Book 4, Chapter 1',\n",
-       "  'book4_chapter2_draft.md': 'Draft for Book 4, Chapter 2',\n",
-       "  'book4_chapter3_draft.md': 'Draft for Book 4, Chapter 3',\n",
-       "  'book5_chapter1_draft.md': 'Draft for Book 5, Chapter 1',\n",
-       "  'book5_chapter2_draft.md': 'Draft for Book 5, Chapter 2',\n",
-       "  'book5_chapter3_draft.md': 'Draft for Book 5, Chapter 3',\n",
-       "  'bookX_chapterY.md': 'Final version of each chapter with compelling storytelling',\n",
-       "  'book1_chapter1.md': 'Created by instruction<Rewrite the draft in book1_chapter1_draft.md into a full-length novel chapter with compelling storytelling>',\n",
-       "  'book1_chapter2.md': 'Created by instruction<Rewrite the draft in book1_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book1_chapter3.md': 'Created by instruction<Rewrite the draft in book1_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book2_chapter1.md': 'Created by instruction<Rewrite the draft in book2_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book2_chapter2.md': 'Created by instruction<Rewrite the draft in book2_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book2_chapter3.md': 'Created by instruction<Rewrite the draft in book2_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book3_chapter1.md': 'Created by instruction<Rewrite the content of book3_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book3_chapter2.md': 'Created by instruction<Rewrite the draft in book3_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book3_chapter3.md': 'Created by instruction<Rewrite the draft in `book3_chapter3_draft.md` into a full length novel chapter with compelling storytelling>',\n",
-       "  'book4_chapter1.md': 'Created by instruction<Rewrite the content of book4_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book4_chapter2.md': 'Created by instruction<Rewrite the draft in book4_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book4_chapter3.md': 'Created by instruction<Rewrite the content of book4_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book5_chapter1.md': 'Created by instruction<Rewrite the draft in `book5_chapter1_draft.md` into a full length novel chapter with compelling storytelling>',\n",
-       "  'book5_chapter2.md': 'Created by instruction<Rewrite the draft in book5_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
-       "  'book5_chapter3.md': 'Created by instruction<Rewrite the draft in book5_chapter3_draft.md into a full length novel chapter with compelling storytelling>'}}"
+       "{'discoveries.txt': 'A list of recent thought-provoking discoveries in science and technology',\n",
+       " 'world_building.md': 'A description of the far future world for the sci-fi novel',\n",
+       " 'characters.md': 'A list of diverse and well-developed characters for the sci-fi novel',\n",
+       " 'story_arcs.md': 'Multiple story arcs with plot twists for the sci-fi novel',\n",
+       " 'bookX_chapterY_draft.md': 'Draft for each chapter of the 5 books',\n",
+       " 'book1_chapter1_draft.md': 'Draft for Book 1, Chapter 1',\n",
+       " 'book1_chapter2_draft.md': 'Draft for Book 1, Chapter 2',\n",
+       " 'book1_chapter3_draft.md': 'Draft for Book 1, Chapter 3',\n",
+       " 'book2_chapter1_draft.md': 'Draft for Book 2, Chapter 1',\n",
+       " 'book2_chapter2_draft.md': 'Draft for Book 2, Chapter 2',\n",
+       " 'book2_chapter3_draft.md': 'Draft for Book 2, Chapter 3',\n",
+       " 'book3_chapter1_draft.md': 'Draft for Book 3, Chapter 1',\n",
+       " 'book3_chapter2_draft.md': 'Draft for Book 3, Chapter 2',\n",
+       " 'book3_chapter3_draft.md': 'Draft for Book 3, Chapter 3',\n",
+       " 'book4_chapter1_draft.md': 'Draft for Book 4, Chapter 1',\n",
+       " 'book4_chapter2_draft.md': 'Draft for Book 4, Chapter 2',\n",
+       " 'book4_chapter3_draft.md': 'Draft for Book 4, Chapter 3',\n",
+       " 'book5_chapter1_draft.md': 'Draft for Book 5, Chapter 1',\n",
+       " 'book5_chapter2_draft.md': 'Draft for Book 5, Chapter 2',\n",
+       " 'book5_chapter3_draft.md': 'Draft for Book 5, Chapter 3',\n",
+       " 'bookX_chapterY.md': 'Final version of each chapter with compelling storytelling',\n",
+       " 'book1_chapter1.md': 'Created by instruction<Rewrite the draft in book1_chapter1_draft.md into a full-length novel chapter with compelling storytelling>',\n",
+       " 'book1_chapter2.md': 'Created by instruction<Rewrite the draft in book1_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book1_chapter3.md': 'Created by instruction<Rewrite the draft in book1_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book2_chapter1.md': 'Created by instruction<Rewrite the draft in book2_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book2_chapter2.md': 'Created by instruction<Rewrite the draft in book2_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book2_chapter3.md': 'Created by instruction<Rewrite the draft in book2_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book3_chapter1.md': 'Created by instruction<Rewrite the content of book3_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book3_chapter2.md': 'Created by instruction<Rewrite the draft in book3_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book3_chapter3.md': 'Created by instruction<Rewrite the draft in `book3_chapter3_draft.md` into a full length novel chapter with compelling storytelling>',\n",
+       " 'book4_chapter1.md': 'Created by instruction<Rewrite the content of book4_chapter1_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book4_chapter2.md': 'Created by instruction<Rewrite the draft in book4_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book4_chapter3.md': 'Created by instruction<Rewrite the content of book4_chapter3_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book5_chapter1.md': 'Created by instruction<Rewrite the draft in `book5_chapter1_draft.md` into a full length novel chapter with compelling storytelling>',\n",
+       " 'book5_chapter2.md': 'Created by instruction<Rewrite the draft in book5_chapter2_draft.md into a full length novel chapter with compelling storytelling>',\n",
+       " 'book5_chapter3.md': 'Created by instruction<Rewrite the draft in book5_chapter3_draft.md into a full length novel chapter with compelling storytelling>'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conv.metadata"
+    "conv.metadata['file_registry']"
    ]
   }
  ],
